src/objects/SOM_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Blackpurl_Heroku_Endpoint__c</fullName>
        <label>Blackpurl Heroku Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Lines_in_CSV_File__c</fullName>
        <description>This is used to define Max number of records in one CSV file. Max value for this is 50,000</description>
        <inlineHelpText>This is used to define Max number of records in one CSV file. Max value for this is 50,000</inlineHelpText>
        <label>Max Lines in CSV File</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Code__c</fullName>
        <label>Org Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOM_sftp_URL__c</fullName>
        <label>SOM sftp URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Directory__c</fullName>
        <label>Upload Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SOM Configuration</label>
</CustomObject>